# synology_album_linker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/synology_album_linker/: cache.py  main.py  photos.py
tests/: test_photos.py
